Faltan algunos endpoints en el front todavía
Sugerencias de cambio al Back:
* que el /get_stock te devuelva el nombre o id del Warehouse también.
* /add_stock, para mí, solo tiene que recibir nombre, cantidad y warehouse. Sin el ID del stock. Incluso quizá el nombre del Warehouse,no el ID.
   * Si nombre y warehouse coinciden, entonces se añade la cantidad
   * Si no, se crea un nuevo stock con nuevo ID.
   * No se si para lograr eso deberíamos hacer POST en vez de GET

Lo haría yo pero soy bastante choto en el tema.

--- a/src/service/add-stock.html
+++ b/src/service/add-stock.html
@@ -1,18 +1,21 @@
-<div id="add-stock-container" >
+<div id="add-stock-container">
     <h2>Añadir Stock</h2>
-    <form id="add-stock-form">
-        <div class="form-group">
-            <label for="item-name">Nombre del Item:</label>
-            <input type="text" id="item-name" required>
-        </div>
-        <div class="form-group">
-            <label for="item-location">Ubicación:</label>
-            <input type="text" id="item-location" required>
-        </div>
-        <div class="form-group">
-            <label for="item-quantity">Cantidad:</label>
-            <input type="number" id="item-quantity" required>
-        </div>
-        <button type="submit">Añadir</button>
-    </form>
+    <div class="form-group">
+        <label for="item-id">Id del Producto:</label>
+        <input type="text" id="item-id" required>
+    </div>
+    <div class="form-group">
+        <label for="item-name">Nombre del Producto:</label>
+        <input type="text" id="item-name" required>
+    </div>
+    <div class="form-group">
+        <label for="item-location">ID del Warehouse:</label>
+        <input type="text" id="item-location" required>
+    </div>
+    <div class="form-group">
+        <label for="item-quantity">Cantidad:</label>
+        <input type="number" id="item-quantity" required>
+    </div>
+    <button id="add-stock-button" onclick="addStock()">Añadir</button>
+    <p id="error-message" class="hidden">Error adding stock. Please try again.</p>
 </div>
