--- a/src/service/orders.html
+++ b/src/service/orders.html
@@ -6,7 +6,6 @@
     <h2>Detalle del Pedido</h2>
     <div id="order-detail-list"></div>
     <button id="complete-order">Marcar como Armado</button>
-    <button id="incomplete-order">No he podido armarlo</button>
-    <button id="back-to-orders">Volver a la Lista de Pedidos</button>
+    <button id="incomplete-order" onclick="hideOrderDetails()">No he podido armarlo</button>
 </div>
 <div id="notification"></div>
