I believe this is finished

--- a/src/service/orders.html
+++ b/src/service/orders.html
@@ -5,7 +5,8 @@
 <div id="order-detail-container" class="hidden">
     <h2>Detalle del Pedido</h2>
     <div id="order-detail-list"></div>
-    <button id="complete-order">Marcar como Armado</button>
-    <button id="incomplete-order" onclick="hideOrderDetails()">No he podido armarlo</button>
+    <button id="complete-order"></button>
+    <!--<button id="complete-order" onclick="prepareOrder(currentOrderId)">Marcar como Preparando</button>-->
+    <button id="incomplete-order" onclick="hideOrderDetails()">Volver a los pedidos</button>
 </div>
 <div id="notification"></div>
