--- a/src/service/add-warehouse.html
+++ b/src/service/add-warehouse.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div id="add-warehouse-container">
+    <h2>Crear Warehouse</h2>
+    <div class="form-group">
+        <label for="warehouse-name">Nombre del Warehouse:</label>
+        <input type="text" id="warehouse-name" required>
+    </div>
+    <button id="add-warehouse-button" onclick="addWarehouse()">Añadir</button>
+    <p id="error-message" class="hidden" style="accent-color: red">Error adding warehouse. Please try again.</p>
+</div>
