--- a/src/service/index.html
+++ b/src/service/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Picking y Gestión de Almacén</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../frontend/src/styles.css">
 </head>
 <body>
 <div class="container">
